rubocop/examples/bad/style_NumericLiterals.rb
# TODO: his cop checks for big numeric literals
#   without _ between groups of digits in them.
